# empty-internet-theory

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md
.github/: dependabot.yaml
.github/workflows/: build.yaml
backend/: Cargo.toml
backend/src/: config.rs  lib.rs  main.rs
backend/src/db/: mod.rs  redis_client.rs
backend/src/grpc/: mod.rs  service.rs
backend/src/handlers/: mod.rs  post_handlers.rs  user_handlers.rs
backend/src/models/: mod.rs
backend/src/routes/: api.rs  mod.rs
backend/src/websockets/: mod.rs  socket.rs
client/: colors.txt  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
client/components/: App.css  App.tsx  BottomNav.tsx  ProfileIcon.tsx  Timeline.tsx  main.tsx
client/components/common/: BottomNav.tsx  Post.tsx  ProfileInfo.tsx
client/components/feed/: Feed.tsx
client/components/lobby/: Lobby.tsx
client/components/loginpage/: LoginPage.tsx
client/components/postgame/: PostGame.tsx
client/components/profilepage/: ProfilePage.tsx
client/components/timeline/: Feed.tsx  Post.tsx
client/contexts/: AuthContext.tsx  FeedContext.tsx
client/hooks/: useAuth.ts  useClient.ts  useFeed.ts  useLeaders.ts  useStatus.ts  useTimeline.ts
client/native/: Cargo.toml  Tauri.toml  build.rs  lib.rs  main.rs
client/native/command/: mod.rs
client/native/service/: mod.rs  timeline.rs
server/: .dockerignore  Cargo.toml  Dockerfile  build.rs  main.rs
server/handler/: account.rs  leaders.rs  mod.rs  status.rs  timeline.rs
server/internal/: events.rs  mod.rs  rooms.rs  types.rs
server/middleware/: mod.rs
server/model/: content.rs  mod.rs
server/models/: post.rs  user.rs
server/protocol/: eit.v1.proto  eit.v1.rest
server/service/: account.rs  leaders.rs  mod.rs  redis_client.rs  redis_connection.rs  redis_db.rs  status.rs  timeline.rs
server/utils/: error.rs  mod.rs
