# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "server"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[[bin]]
name = "server"
path = "./main.rs"

[dependencies]
clap = { version = "4.4.14", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.7.3", features = ["http2", "ws", "macros"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
futures = { version = "0.3.30", features = [] }

tower = { version = "0.4.13", features = ["timeout", "util"] }
tower-http = { version = "0.5.1", features = ["trace", "cors", "request-id", "compression-gzip", "util"] }

tracing = { version = "0.1.40", features = [] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111", features = [] }
anyhow = { version = "1.0.79", features = [] }
ts-rs = { version = "8.0.0", features = [] }
