# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "client"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[[bin]]
name = "client"
path = "./main.rs"

[dependencies]
prost = { version = "0.12.3", features = [] }
tonic = { version = "0.10.2", features = [] }

[build-dependencies]
tonic-build = { version = "0.10.2", features = [] }
anyhow = { version = "1.0.79", features = [] }
