# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "client"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lib]
name = "client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
path = "./lib.rs"

[[bin]]
name = "client"
path = "./main.rs"

[dependencies]
tauri = { version = "2.0.0-alpha.21", features = [] }
tauri-plugin-shell = { version = "2.0.0-alpha.6", features = [] }

serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111", features = [] }
anyhow = { version = "1.0.79", features = [] }

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.14", features = ["config-toml"] }
